@@ -5,6 +5,7 @@ import static org.junit.Assert.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import java.util.Arrays;
+import java.util.List;
 
 import org.junit.jupiter.api.Test;
 import org.mockito.Mockito;
@@ -24,33 +25,46 @@ public class DescriptorMapTest {
         final String channelDescriptor2Name = "channelDescriptor2";
         final String providerDescriptorName = "providerDescriptor";
 
-        Mockito.when(channelDescriptor1.getDescriptorKey()).thenReturn(mockKey(channelDescriptor1Name));
-        Mockito.when(channelDescriptor2.getDescriptorKey()).thenReturn(mockKey(channelDescriptor2Name));
-        Mockito.when(providerDescriptor.getDescriptorKey()).thenReturn(mockKey(providerDescriptorName));
+        final DescriptorKey channelDescriptor1Key = new MockDescriptorKey(channelDescriptor1Name);
+        final DescriptorKey channelDescriptor2Key = new MockDescriptorKey(channelDescriptor2Name);
+        final DescriptorKey providerDescriptorKey = new MockDescriptorKey(providerDescriptorName);
+
+        Mockito.when(channelDescriptor1.getDescriptorKey()).thenReturn(channelDescriptor1Key);
+        Mockito.when(channelDescriptor2.getDescriptorKey()).thenReturn(channelDescriptor2Key);
+        Mockito.when(providerDescriptor.getDescriptorKey()).thenReturn(providerDescriptorKey);
 
         Mockito.when(channelDescriptor1.getType()).thenReturn(DescriptorType.CHANNEL);
         Mockito.when(channelDescriptor2.getType()).thenReturn(DescriptorType.CHANNEL);
         Mockito.when(providerDescriptor.getType()).thenReturn(DescriptorType.PROVIDER);
 
-        final DescriptorMap descriptorMap = new DescriptorMap(Arrays.asList(channelDescriptor1, channelDescriptor2), Arrays.asList(providerDescriptor), Arrays.asList());
+        final DescriptorMap descriptorMap = new DescriptorMap(List.of(channelDescriptor1Key, channelDescriptor2Key, providerDescriptorKey), List.of(channelDescriptor1, channelDescriptor2), Arrays.asList(providerDescriptor),
+            Arrays.asList());
 
         assertEquals(3, descriptorMap.getDescriptorMap().size());
         assertEquals(2, descriptorMap.getChannelDescriptorMap().size());
         assertEquals(1, descriptorMap.getProviderDescriptorMap().size());
 
-        assertNotNull(descriptorMap.getChannelDescriptor(channelDescriptor1Name));
-        assertNotNull(descriptorMap.getDescriptor(providerDescriptorName));
+        assertNotNull(descriptorMap.getChannelDescriptor(channelDescriptor1Key));
+        assertNotNull(descriptorMap.getDescriptor(providerDescriptorKey));
 
-        assertTrue(descriptorMap.getChannelDescriptor(providerDescriptorName).isEmpty());
-        assertTrue(descriptorMap.getDescriptor("Random name").isEmpty());
+        assertTrue(descriptorMap.getChannelDescriptor(providerDescriptorKey).isEmpty());
+
+        final DescriptorKey randomKey = new MockDescriptorKey("Random name");
+        assertTrue(descriptorMap.getDescriptor(randomKey).isEmpty());
+
+        assertTrue(descriptorMap.getDescriptorKey("Random name").isEmpty());
     }
 
-    private DescriptorKey mockKey(String key) {
-        return new DescriptorKey() {
-            @Override
-            public String getUniversalKey() {
-                return key;
-            }
-        };
+    private class MockDescriptorKey extends DescriptorKey {
+        private final String key;
+
+        public MockDescriptorKey(final String key) {
+            this.key = key;
+        }
+
+        @Override
+        public String getUniversalKey() {
+            return key;
+        }
     }
 }
